renamed .js and .css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="projeto-final.css" media="screen"/>
+	<link rel="stylesheet" type="text/css" href="final-project.css" media="screen"/>
 
 </head>
 
@@ -25,7 +25,7 @@
 	<input type="range" min="0" max="150" id="cathetus2" onInput="update()" value="100">	
 </div>
 
-<script src="projeto-final.js"></script>
+<script src="final-project.js"></script>
 
 </body>
 
