Started visual update

--- a/index.html
+++ b/index.html
@@ -9,24 +9,30 @@
 
 <body>
 
-<p>
-	<span id="span"></span>
-</p>
+<div class="container">
+	<h1 align="center">Prova do Teorema de Pitágoras</h1>	
+	<blockquote>Em qualquer triângulo retângulo, a área do quadrado cujo lado é a hipotenusa é igual à soma das áreas dos quadrados cujos lados são os catetos.</blockquote> 
+	<p>Para que essa constatação seja provada</p>
+	
+	<div align="center">
+		<canvas id="cnv" width="500" height="500"><canvas>
+	</div>
 
-<div align="center">
-	<canvas id="cnv" width="500" height="500"><canvas>
-</div>
+	<div class="bar" align="left">
+		<input type="range" min="0" max="150" id="cathetus1" onInput="update()" value="100">	
+	</div>
 
-<div class="bar" align="left">
-	<input type="range" min="0" max="150" id="cathetus1" onInput="update()" value="100">	
-</div>
+	<div class="bar" align="right">
+		<input type="range" min="0" max="150" id="cathetus2" onInput="update()" value="100">	
+	</div>
 
-<div class="bar" align="right">
-	<input type="range" min="0" max="150" id="cathetus2" onInput="update()" value="100">	
-</div>
+	<p align="center"><var id="cat1"></var> <sup>2</sup> + <var id="cat2"></var> <sup>2</sup> = <var id="hyp"></var> <sup>2</sup>
+	<br>
+	<var id="cat1Square"></var> + <var id="cat2Square"></var> = <var id="hypSquare"></var>
+	</p>
 
 <script src="final-project.js"></script>
-
+</div>
 </body>
 
 </html>
