Finished the visual update
Finished the visual update and added plotly for graphs-update.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
+	<script src="plotly.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="final-project.css" media="screen"/>
 	<link rel="icon" href="icon.png">
 	<title id="title">Teorema de Pitágoras</title>
@@ -13,24 +14,46 @@
 <div class="container">
 	<h1 align="center">Prova do Teorema de Pitágoras</h1>	
 	<blockquote>Em qualquer triângulo retângulo, a área do quadrado cujo lado é a <var>hipotenusa</var> é igual à soma das áreas dos quadrados cujos lados são os <var>catetos</var>.</blockquote> 
-	<p>Para que essa constatação seja provada será feito um experimento virtual, onde uma certa quantidade de água é toda depositada no quadrado com lado igual à <var>hipotenusa</var> do triângulo, posteriormente a água será escoada para os dois quadrados de lado</p>
+	<p>Para que essa constatação seja verdadeira será feito um experimento virtual, onde uma certa quantidade de água é toda depositada no quadrado com lado igual à <var>hipotenusa</var> do triângulo, posteriormente a água será escoada para os dois quadrados em que seus lados são os <var>catetos</var>, assim provando a afirmação acima.</p>
+	
+	<p>Esse experimento virtual funciona de acordo com as seguintes condições:
+		<ul>
+			<li>A profundidade de todos os elementos é de 1, então podemos igualar volume e área.</li><br>
+			<li>A animação tem um tempo fixo de 10 segundos, então a <var>vazão</var> <var>V</var> do quadrado da <var>hipotenusa</var> será representada por: <var>V</var> = <var>hipotenusa</var><sup>2</sup>/10 (área/tempo).</li><br>
+			<li>A taxa de enchimento de cada quadrado dos catetos é representada por: <var>Vx</var> = <var>V</var>*<var>cateto_x</var><sup>2</sup>/<var>hipotenusa</var><sup>2</sup>. Sendo que <var>V</var> é a <var>vazão</var> definida no item anterior e <var>Vx</var> é a taxa de enchimento do quadrado do <var>cateto x</var>. Assim o enchimento de cada quadrado é proporcional à sua área, então eles terminarão de encher juntos.</li><br>
+			<li>O usuário pode escolher o comprimento que preferir para cada cateto, dentro do intervalo de 15 a 150 pixels.</li>
+		</ul>
+		Teste o experimento a seguir:
+	</p>
 	
 	<div align="center">
 		<canvas id="cnv" width="500" height="500"><canvas>
 	</div>
 
-	<div class="bar" align="left">
-		<input type="range" min="0" max="150" id="cathetus1" onInput="update()" value="100">	
+	<div class="container" align="center">
+		<div class="bar" align="left">
+			<input type="range" min="15" max="150" id="cathetus1" onInput="update()" value="100">	
+		</div>
+
+		<div class="bar" align="right">
+			<input type="range" min="15" max="150" id="cathetus2" onInput="update()" value="100">	
+		</div>
 	</div>
 
-	<div class="bar" align="right">
-		<input type="range" min="0" max="150" id="cathetus2" onInput="update()" value="100">	
-	</div>
+	<p align="center">Veja abaixo o teorema de Pitágoras aplicado aos catetos escolhidos:<br>
+	<span id="message-text"></span></p>
+</div>	
+<hr>
 
-	<p align="center" id="message-text"></p>
+<!--
+<div class="container">	
+	<p>Abaixo você pode conferir o gráficos de volume nos quadrados em função do tempo</p>
+	<div id="hypChart"></div>
+
+</div> 
+-->
 
 <script src="final-project.js"></script>
-</div>
 </body>
 
 </html>
