Canvas closing fixed
It was <canvas> before, now it's </canvas>.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	</p>
 	
 	<div align="center">
-		<canvas id="cnv" width="500" height="500"><canvas>
+		<canvas id="cnv" width="500" height="500"></canvas>
 	</div>
 
 	<div class="container" align="center">
