Criei classe pro gráfico

--- a/index.html
+++ b/index.html
@@ -46,12 +46,21 @@
 <hr>
 
 <!--
+	q da hyp
+	Volume = hyp**2 - flowRate*t
+
+	q do cateto1
+	Volume = flowRate1*t
+
+	q do cateto 2
+	Volume = flowRate2*t
+-->
+
 <div class="container">	
 	<p>Abaixo você pode conferir o gráficos de volume nos quadrados em função do tempo</p>
 	<div id="hypChart"></div>
 
 </div> 
--->
 
 <script src="final-project.js"></script>
 </body>
