--- a/index.html
+++ b/index.html
@@ -43,23 +43,14 @@
 	<p align="center">Veja abaixo o teorema de Pitágoras aplicado aos catetos escolhidos:<br>
 	<span id="message-text"></span></p>
 </div>	
+
 <hr>
 
-<!--
-	q da hyp
-	Volume = hyp**2 - flowRate*t
-
-	q do cateto1
-	Volume = flowRate1*t
-
-	q do cateto 2
-	Volume = flowRate2*t
--->
-
-<div class="container">	
-	<p>Abaixo você pode conferir o gráficos de volume nos quadrados em função do tempo</p>
-	<div id="hypChart"></div>
-
+<div class="container" style="max-width: 1060px;">	
+	<p align="center">Abaixo você pode conferir os gráficos de volume nos quadrados em função do tempo:</p>
+	<div class="chart" id="hypChart"></div>
+	<div class="chart" id="cat1Chart"></div>
+	<div class="chart" id="cat2Chart"></div>
 </div> 
 
 <script src="final-project.js"></script>
