--- a/index.html
+++ b/index.html
@@ -54,11 +54,14 @@
 
 <div class="container">	
 	<p align="center">Abaixo você pode conferir os gráficos de volume nos quadrados em função do tempo:</p>
-	<div class="container" id="chart"></div>
+	<div class="container" align="center" id="chart"></div>
 </div>
-
 <hr>
-
+<!--
+<p>	$$  \Delta L1 = \sqrt{2\frac{vt}{\sin{\alpha}(\cos{\alpha}+\sin{\alpha}\cot{\beta})}} $$
+	$$ \Delta L2 = -\frac{\Delta L1}{2}+\frac{vt}{\Delta L1\sin{\alpha}(\cos{\alpha}+\sin{\alpha}\cot{\beta})} $$
+</p>
+-->
 <script src="final-project.js"></script>
 </body>
 
