Added the other delta L equations

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 	<script>window.MathJax = { tex: { inlineMath: [['$', '$'], ['\\(', '\\)']] } };</script>
 	<link rel="stylesheet" type="text/css" href="final-project.css" media="screen"/>
-	<link rel="icon" href="icon.png">
+	<link rel="icon" href="images/icon.png">
 	<title id="title">Teorema de Pitágoras</title>
 </head>
 
@@ -57,11 +57,14 @@
 	<div class="container" align="center" id="chart"></div>
 </div>
 <hr>
-<!--
-<p>	$$  \Delta L1 = \sqrt{2\frac{vt}{\sin{\alpha}(\cos{\alpha}+\sin{\alpha}\cot{\beta})}} $$
+
+<p>	
+	$$ \Delta L1 = \sqrt{2\frac{vt}{\sin{\alpha}(\cos{\alpha}+\sin{\alpha}\cot{\beta})}} $$ <img src="images/deltaL1.png"></img>
 	$$ \Delta L2 = -\frac{\Delta L1}{2}+\frac{vt}{\Delta L1\sin{\alpha}(\cos{\alpha}+\sin{\alpha}\cot{\beta})} $$
+	$$ \Delta L3 = -\frac{\Delta L1}{2}\frac{sin{\alpha}}{\sin{\beta}}+\frac{vt}{\Delta L1\sin{\beta}(\cos{\alpha}+\sin{\alpha}\cot{\beta})} $$
+	$$ \Delta L4 = \sqrt{\frac{2hyp^2-2vt}{sin{\alpha}(\cos{\alpha}+\sin{\alpha}\cot{\beta})}} $$
 </p>
--->
+
 <script src="final-project.js"></script>
 </body>
 
