--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </div>
 
 <div align="center">
-	<a href="explanation.html" target="_blank">Clique aqui para ver a explicação matemática!</a>
+	<a href="explanation.html">Clique aqui para ver a explicação matemática!</a>
 </div>
 
 <script src="final-project.js"></script>
